# snowflake-rs

./: Cargo.toml  Readme.md
src/: generator.rs  lib.rs  main.rs
src/generator/: config.rs  generator.rs
